--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "awesome-typescript-loader": "^5.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
@@ -46,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-lottie": "^1.2.5",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "eslint": "^7.15.0",
