--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "awesome-typescript-loader": "^5.2.1",
+    "chart.js": "^2.9.4",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-lottie": "^1.2.3",
