--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^14.14.13",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "aos": "^2.3.4",
     "awesome-typescript-loader": "^5.2.1",
     "chart.js": "^2.9.4",
     "react": "^17.0.1",
@@ -21,6 +22,7 @@
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -50,7 +52,9 @@
     ]
   },
   "devDependencies": {
+    "@types/aos": "^3.0.3",
     "@types/react-lottie": "^1.2.5",
+    "@types/react-scroll": "^1.8.2",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "eslint": "^7.15.0",
