--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "aos": "^2.3.4",
     "awesome-typescript-loader": "^5.2.1",
     "chart.js": "^2.9.4",
+    "prerender-node": "^3.2.5",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.1.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
@@ -53,6 +55,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.3",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-lottie": "^1.2.5",
     "@types/react-scroll": "^1.8.2",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
